优化 streaming 程序的日志输出形式.